Issue 7486 (Disable icon for CSS properties is cut off on Retina displays) https://code.google.com/p/fbug/issues/detail?id=7486

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -170,10 +170,11 @@
 
 .cssProp:-moz-any(.editGroup:hover,
                   .disabledStyle) > .cssPropIndent {
-    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px 1px;
+    background: transparent url(chrome://firebug/skin/disable.svg) no-repeat 2px center;
 }
 
-.cssProp.editGroup > span:first-child {
+.cssProp.editGroup > .cssPropIndent {
+    display: inline-block;
     cursor: pointer;
 }
 
